# jupyter-utils

./: .gitmodules  README.md  index.html  open_atmos_jupyter_utils.html  pip_install_on_colab.html  pyproject.toml  requirements.txt  search.js  setup.py  show_plot.html  temporary_file.html
.binder/: requirements.txt
.github/workflows/: pdoc.yml  pylint.yml  pypi.yml  stale.yml  tests.yml  urlcheck.yml
atmos_cloud_sim_uj_utils/: __init__.py  pip_install_on_colab.py  show_plot.py  temporary_file.py
examples/: notebook_vars.ipynb  notebook_vars_example.ipynb  show_anim.ipynb  show_anim_example.ipynb  show_gif.ipynb  show_plot.ipynb
open_atmos_jupyter_utils/: __init__.py  notebook_vars.html  notebook_vars.py  pip_install_on_colab.html  pip_install_on_colab.py  show_anim.html  show_anim.py  show_plot.html  show_plot.py  temporary_file.html
tests/: test_notebook_vars.py
