[tool.setuptools]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "post-release"

[build-system]
requires = ['setuptools==75.3.0', 'setuptools-scm==8.1.0']
build-backend = "setuptools.build_meta"

[project]
name = 'open-atmos-jupyter-utils'
description = "utility routines used in PySDM, PyMPDATA and PyPartMC examples and tests"
license = {text = "GPL-3.0"}
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "ipywidgets",
    "IPython",
    "matplotlib",
    "imageio",
    "nbformat"
]
[project.urls]
"Homepage" = "https://github.com/open-atmos/jupyter-utils"
"Source" = "https://github.com/open-atmos/jupyter-utils"
"Tracker" = "https://github.com/open-atmos/jupyter-utils/issues"
"Documentation" = "https://open-atmos.github.io/jupyter-utils"
